--- a/app/views/CheckYourSuspensionDetailsView.scala.html
+++ b/app/views/CheckYourSuspensionDetailsView.scala.html
@@ -32,7 +32,7 @@
             @h1("checkYourSuspensionDetails.heading")
             @govukSummaryList(list)
             @govukButton(
-                ButtonViewModel(messages("continue"))
+                ButtonViewModel(messages("checkYourSuspensionDetails.confirm"))
                 )
             }
 }
