--- a/app/views/components/FieldSet.scala.html
+++ b/app/views/components/FieldSet.scala.html
@@ -23,7 +23,7 @@
 @govukFieldset(Fieldset(
     legend = Some(Legend(
         content = Text(messages(legend)),
-        classes = if(asHeading) "govuk-fieldset__legend--l" else emptyString,
+        classes = if(asHeading) "govuk-fieldset__legend--xl govuk-!-margin-bottom-8" else emptyString,
         isPageHeading = asHeading
     )),
     describedBy = describedBy,
