--- a/app/views/AmendPlanEndDateView.scala.html
+++ b/app/views/AmendPlanEndDateView.scala.html
@@ -19,7 +19,7 @@
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
+    mainErrorSummary: MainErrorSummary,
     govukDateInput: GovukDateInput,
     govukButton: GovukButton,
     h1: Header1,
@@ -32,9 +32,7 @@
 
     @formHelper(action = routes.AmendPlanEndDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
-        @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value.day")))
-        }
+        @mainErrorSummary(form)
 
         @h1(messages("amendPlanEndDate.heading"))
         @p(messages("amendPlanEndDate.p1"))
