DTR-585: Attribute values according to payment plans

--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -29,7 +29,7 @@
     govukSummaryList: GovukSummaryList
 )
 
-@(directDebitReference: String, directDebitDetails: NddDDPaymentPlansResponse)(implicit request: Request[_], messages: Messages)
+@(directDebitReference: String, directDebitDetails: NddDDPaymentPlansResponse,  paymentPlansList: Seq[SummaryList])(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForSetupJourneyNoForm(messages("directDebitPaymentSummary.title")), backLink = Some(routes.YourDirectDebitInstructionsController.onPageLoad().url)) {
 
@@ -58,41 +58,8 @@
 
     <h1 class="govuk-heading-m">@messages("directDebitPaymentSummary.activePayment.h1")</h1>
 
-    @for(pp <- directDebitDetails.paymentPlanList) {
-        @govukSummaryList(SummaryList(
-            card = Some(Card(
-                title = Some(CardTitle(
-                    content = messages("directDebitPaymentSummary.activePayment.summary.title", pp.planRefNumber)
-                )),
-                actions = Some(Actions(
-                    items = Seq(
-                        ActionItem(
-                            href = routes.PaymentPlanDetailsController.onRedirect(pp.planRefNumber).url,
-                            content = messages("directDebitPaymentSummary.activePayment.summary.action"),
-                            visuallyHiddenText = Some(messages(pp.planRefNumber))
-                        )
-                    )
-                ))
-            )),
-            rows = Seq(
-                SummaryListRow(
-                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.planType")),
-                    value = Value(content = HtmlContent(messages(s"directDebitPaymentSummary.activePayment.summary.planType.${pp.planType}")))
-                ),
-                SummaryListRow(
-                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.paymentFor")),
-                    value = Value(content = HtmlContent(messages(s"paymentPlanDetails.details.hodService.${pp.hodService}")))
-                ),
-                SummaryListRow(
-                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.date")),
-                    value = Value(content = HtmlContent(pp.submissionDateTime.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
-                ),
-                SummaryListRow(
-                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.amount")),
-                    value = Value(content = HtmlContent(formatAmount(pp.scheduledPaymentAmount)))
-                )
-            )
-        ))
+    @for(plan <- paymentPlansList) {
+        @govukSummaryList(plan)
     }
 
     <h1 class="govuk-heading-m">@messages("directDebitPaymentSummary.setupPayment.h1")</h1>
