--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -27,10 +27,11 @@
         header1: Header1,
         header2: Header2,
         paragraph: Paragraph,
-        govukSummaryList: GovukSummaryList
+        govukSummaryList: GovukSummaryList,
+        link: Link
 )
 
-@(planType: String, paymentReference: String, showAmendLink: Boolean, showCancelLink: Boolean, showSuspendLink: Boolean, isSuspensionActive: Boolean, suspensionStartDate: String, suspensionEndDate: String, rows: Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
+@(planType: String, paymentReference: String, showAmendLink: Boolean, showCancelLink: Boolean, showSuspendLink: Boolean, isSuspensionActive: Boolean, suspensionStartDate: String, suspensionEndDate: String, rows: Seq[SummaryListRow], isAdvanceNoticePresent: Boolean, totalAmount: String, dueDate: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForManageJourneyNoForm(messages("paymentPlanDetails.title")), backLink = Some(routes.DirectDebitSummaryController.onPageLoad().url)) {
     @header1("paymentPlanDetails.heading")
@@ -42,7 +43,21 @@
         </p>
     }
 
-    @govukSummaryList(SummaryList(
+    @if(planType == PaymentPlanType.VariablePaymentPlan.toString) {
+        @if(isAdvanceNoticePresent) {
+            <p class="govuk-inset-text">
+                @messages("paymentPlanDetails.inset.advanceNotice.text", totalAmount, dueDate)
+                <a href="@routes.DirectDebitSummaryController.onPageLoad().url">@messages("paymentPlanDetails.advanceNotice.link")</a>
+            </p>
+        } else {
+            <p class="govuk-inset-text">
+                @messages("paymentPlanDetails.inset.noAdvanceNotice.text")
+            </p>
+        }
+    }
+
+
+@govukSummaryList(SummaryList(
         card = Some(Card(
             title = Some(CardTitle(
             content = messages("paymentPlanDetails.details.paymentReference", paymentReference)
