--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -21,7 +21,7 @@
 
 @this(
     layout: templates.Layout,
-    header1: Header1,
+    h1: Header1,
     paragraph: Paragraph,
     paragraphMessageWithLink: ParagraphMessageWithLink,
     govukButton: GovukButton,
@@ -33,11 +33,11 @@
 
 @layout(pageTitle = titleForSetupJourneyNoForm(messages("directDebitPaymentSummary.title")), backLink = Some(routes.YourDirectDebitInstructionsController.onPageLoad().url)) {
 
-    @header1("directDebitPaymentSummary.heading")
+    @h1("directDebitPaymentSummary.heading")
     @paragraph("directDebitPaymentSummary.p1")
     @paragraph("directDebitPaymentSummary.p2")
 
-    <h1 class="govuk-heading-m">@messages("directDebitPaymentSummary.directDebit.title")</h1>
+    @h1("directDebitPaymentSummary.directDebit.title")
 
     @govukSummaryList(SummaryList(
         rows = Seq(
@@ -56,13 +56,13 @@
         )
     ))
 
-    <h1 class="govuk-heading-m">@messages("directDebitPaymentSummary.activePayment.h1")</h1>
+    @h1("directDebitPaymentSummary.activePayment.h1")
 
     @for(plan <- paymentPlansList) {
         @govukSummaryList(plan)
     }
 
-    <h1 class="govuk-heading-m">@messages("directDebitPaymentSummary.setupPayment.h1")</h1>
+    @h1("directDebitPaymentSummary.setupPayment.h1")
 
     @paragraph("directDebitPaymentSummary.setupPayment.p1")
 
