DTR-1143: update showing payment reference

--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -62,7 +62,7 @@
         @govukSummaryList(SummaryList(
             card = Some(Card(
                 title = Some(CardTitle(
-                    content = messages("directDebitPaymentSummary.activePayment.summary.title", pp.planRefNumber)
+                    content = messages("directDebitPaymentSummary.activePayment.summary.title", pp.paymentReference)
                 )),
                 actions = Some(Actions(
                     items = Seq(
