--- a/app/views/AmendPaymentPlanConfirmationView.scala.html
+++ b/app/views/AmendPaymentPlanConfirmationView.scala.html
@@ -29,7 +29,7 @@
         govukDetails: GovukDetails,
 )
 
-@(mode: Mode, paymentPlanReference: String, directDebitReference: String, sortCode: String, accountNumber: String, rows:Seq[SummaryListRow], call: Call)(implicit request: Request[_], messages: Messages)
+@(mode: Mode, paymentReference: String, directDebitReference: String, sortCode: String, accountNumber: String, rows:Seq[SummaryListRow], call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForManageJourneyNoForm(messages("amendPaymentPlanConfirmation.title")), backLink = Some(call.url)) {
     @formHelper(action = routes.AmendPaymentPlanConfirmationController.onSubmit(mode), Symbol("autoComplete") -> "off") {
@@ -59,7 +59,7 @@
         @govukSummaryList(SummaryList(
             card = Some(Card(
                 title = Some(CardTitle(
-                    content = messages("amendPaymentPlanConfirmation.amendPaymentPlan.paymentReference", paymentPlanReference)
+                    content = messages("amendPaymentPlanConfirmation.amendPaymentPlan.paymentReference", paymentReference)
                 ))
             )),
             rows = rows
